[package]
name = "ais"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[profile.release]
#debug = true

[dependencies]
rand = "0.8.4"
rayon = "1.6.1"
plotters = "0.3.1"
statrs = "0.16"
strum = "0.24"
strum_macros = "0.24"
json = "0.12.4"